--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 /storage/*
 !/storage/.keep
 .byebug_history
-book-front/node_modules
+**/node_modules
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
